objects/box__BoxSignSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>box__Disable_Files_Sync_to_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Files Sync to Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__Link_attachment_to_parent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want to link signed document(attachment) to parent object</inlineHelpText>
        <label>Link attachment to parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__Link_file_to_parent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want to link signed document(Files) to parent object</inlineHelpText>
        <label>Link file to parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__team_domain__c</fullName>
        <defaultValue>&quot;https://signrequest.com&quot;</defaultValue>
        <label>team domain</label>
        <type>Url</type>
    </fields>
    <label>Box Sign Settings</label>
</CustomObject>